--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,14 +14,11 @@ header {
 header h2 {
     color: white;
 }
-
-
 /* left column */
 input, button {
     width: 100%;
     margin-bottom: 20px;
 }
-
 ul {
     list-style-type: none;
 }
@@ -31,3 +28,4 @@ ul {
       padding-bottom: 20px;
       justify-content: center;
       position: relative;
+    }
